practica/sintactico.output
State 7 conflicts: 1 shift/reduce
State 58 conflicts: 7 shift/reduce
State 77 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAMA ID PARI PARD PYC declarations compound_statement PUNTO
    2        | PROGRAMA ID PARI PARD PYC declarations compound_statement

    3 declarations: declarations VAR identifier_list DOSP type PYC
    4             | error PYC
    5             | %empty

    6 identifier_list: ID
    7                | identifier_list COMA ID

    8 type: ENTERO

    9 compound_statement: COMIENZO optional_statements FIN
   10                   | error FIN

   11 optional_statements: statement_list
   12                    | %empty

   13 statement_list: statement
   14               | statement_list statement

   15 statement: ID ASSIGN expression PYC
   16          | compound_statement PYC
   17          | SI expression ENTONCES statement SINO statement
   18          | SI expression ENTONCES statement
   19          | MIENTRAS expression HACER statement
   20          | HACER statement MIENTRAS expression PYC
   21          | PARA PARI ID ASSIGN expression PYC expression PYC expression PARD HACER statement
   22          | IMPRIMIR print_list PYC
   23          | LEER read_list PYC
   24          | error PYC

   25 print_list: print_item
   26           | print_list COMA print_item

   27 print_item: expression
   28           | CADENA

   29 read_list: ID
   30          | read_list COMA ID

   31 expression: expression MAS expression
   32           | expression MENOS expression
   33           | expression MULT expression
   34           | expression DIV expression
   35           | MENOS expression
   36           | PARI expression PARD
   37           | expression IGUAL expression
   38           | expression MENOR MAYOR expression
   39           | expression MAYOR expression
   40           | expression MENOR expression
   41           | expression MAYOR IGUAL expression
   42           | expression MENOR IGUAL expression
   43           | NOT expression
   44           | ID
   45           | NUM


Terminals, with rules where they appear

$end (0) 0
error (256) 4 10 24
PROGRAMA (258) 1 2
VAR (259) 3
ENTERO (260) 8
COMIENZO (261) 9
FIN (262) 9 10
SI (263) 17 18
ENTONCES (264) 17 18
SINO (265) 17
MIENTRAS (266) 19 20
HACER (267) 19 20 21
IMPRIMIR (268) 22
LEER (269) 23
PYC (270) 1 2 3 4 15 16 20 21 22 23 24
DOSP (271) 3
PUNTO (272) 1
COMA (273) 7 26 30
MAS (274) 31
MENOS (275) 32 35
MULT (276) 33
PARI (277) 1 2 21 36
PARD (278) 1 2 21 36
DIV (279) 34
ASSIGN (280) 15 21
PARA (281) 21
MENOR (282) 38 40 42
MAYOR (283) 38 39 41
IGUAL (284) 37 41 42
NOT (285) 43
NUM (286) 45
ID (287) 1 2 6 7 15 21 29 30 44
CADENA (288) 28
UMENOS (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1 2, on right: 0
declarations (37)
    on left: 3 4 5, on right: 1 2 3
identifier_list (38)
    on left: 6 7, on right: 3 7
type (39)
    on left: 8, on right: 3
compound_statement (40)
    on left: 9 10, on right: 1 2 16
optional_statements (41)
    on left: 11 12, on right: 9
statement_list (42)
    on left: 13 14, on right: 11 14
statement (43)
    on left: 15 16 17 18 19 20 21 22 23 24, on right: 13 14 17 18 19
    20 21
print_list (44)
    on left: 25 26, on right: 22 26
print_item (45)
    on left: 27 28, on right: 25 26
read_list (46)
    on left: 29 30, on right: 23 30
expression (47)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right:
    15 17 18 19 20 21 27 31 32 33 34 35 36 37 38 39 40 41 42 43


State 0

    0 $accept: . program $end

    PROGRAMA  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAMA . ID PARI PARD PYC declarations compound_statement PUNTO
    2        | PROGRAMA . ID PARI PARD PYC declarations compound_statement

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAMA ID . PARI PARD PYC declarations compound_statement PUNTO
    2        | PROGRAMA ID . PARI PARD PYC declarations compound_statement

    PARI  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: PROGRAMA ID PARI . PARD PYC declarations compound_statement PUNTO
    2        | PROGRAMA ID PARI . PARD PYC declarations compound_statement

    PARD  shift, and go to state 6


State 6

    1 program: PROGRAMA ID PARI PARD . PYC declarations compound_statement PUNTO
    2        | PROGRAMA ID PARI PARD . PYC declarations compound_statement

    PYC  shift, and go to state 7


State 7

    1 program: PROGRAMA ID PARI PARD PYC . declarations compound_statement PUNTO
    2        | PROGRAMA ID PARI PARD PYC . declarations compound_statement

    error  shift, and go to state 8

    error     [reduce using rule 5 (declarations)]
    VAR       reduce using rule 5 (declarations)
    COMIENZO  reduce using rule 5 (declarations)

    declarations  go to state 9


State 8

    4 declarations: error . PYC

    PYC  shift, and go to state 10


State 9

    1 program: PROGRAMA ID PARI PARD PYC declarations . compound_statement PUNTO
    2        | PROGRAMA ID PARI PARD PYC declarations . compound_statement
    3 declarations: declarations . VAR identifier_list DOSP type PYC

    error     shift, and go to state 11
    VAR       shift, and go to state 12
    COMIENZO  shift, and go to state 13

    compound_statement  go to state 14


State 10

    4 declarations: error PYC .

    $default  reduce using rule 4 (declarations)


State 11

   10 compound_statement: error . FIN

    FIN  shift, and go to state 15


State 12

    3 declarations: declarations VAR . identifier_list DOSP type PYC

    ID  shift, and go to state 16

    identifier_list  go to state 17


State 13

    9 compound_statement: COMIENZO . optional_statements FIN

    error     shift, and go to state 18
    COMIENZO  shift, and go to state 13
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    IMPRIMIR  shift, and go to state 22
    LEER      shift, and go to state 23
    PARA      shift, and go to state 24
    ID        shift, and go to state 25

    FIN  reduce using rule 12 (optional_statements)

    compound_statement   go to state 26
    optional_statements  go to state 27
    statement_list       go to state 28
    statement            go to state 29


State 14

    1 program: PROGRAMA ID PARI PARD PYC declarations compound_statement . PUNTO
    2        | PROGRAMA ID PARI PARD PYC declarations compound_statement .

    PUNTO  shift, and go to state 30

    $default  reduce using rule 2 (program)


State 15

   10 compound_statement: error FIN .

    $default  reduce using rule 10 (compound_statement)


State 16

    6 identifier_list: ID .

    $default  reduce using rule 6 (identifier_list)


State 17

    3 declarations: declarations VAR identifier_list . DOSP type PYC
    7 identifier_list: identifier_list . COMA ID

    DOSP  shift, and go to state 31
    COMA  shift, and go to state 32


State 18

   10 compound_statement: error . FIN
   24 statement: error . PYC

    FIN  shift, and go to state 15
    PYC  shift, and go to state 33


State 19

   17 statement: SI . expression ENTONCES statement SINO statement
   18          | SI . expression ENTONCES statement

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 39


State 20

   19 statement: MIENTRAS . expression HACER statement

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 40


State 21

   20 statement: HACER . statement MIENTRAS expression PYC

    error     shift, and go to state 18
    COMIENZO  shift, and go to state 13
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    IMPRIMIR  shift, and go to state 22
    LEER      shift, and go to state 23
    PARA      shift, and go to state 24
    ID        shift, and go to state 25

    compound_statement  go to state 26
    statement           go to state 41


State 22

   22 statement: IMPRIMIR . print_list PYC

    MENOS   shift, and go to state 34
    PARI    shift, and go to state 35
    NOT     shift, and go to state 36
    NUM     shift, and go to state 37
    ID      shift, and go to state 38
    CADENA  shift, and go to state 42

    print_list  go to state 43
    print_item  go to state 44
    expression  go to state 45


State 23

   23 statement: LEER . read_list PYC

    ID  shift, and go to state 46

    read_list  go to state 47


State 24

   21 statement: PARA . PARI ID ASSIGN expression PYC expression PYC expression PARD HACER statement

    PARI  shift, and go to state 48


State 25

   15 statement: ID . ASSIGN expression PYC

    ASSIGN  shift, and go to state 49


State 26

   16 statement: compound_statement . PYC

    PYC  shift, and go to state 50


State 27

    9 compound_statement: COMIENZO optional_statements . FIN

    FIN  shift, and go to state 51


State 28

   11 optional_statements: statement_list .
   14 statement_list: statement_list . statement

    error     shift, and go to state 18
    COMIENZO  shift, and go to state 13
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    IMPRIMIR  shift, and go to state 22
    LEER      shift, and go to state 23
    PARA      shift, and go to state 24
    ID        shift, and go to state 25

    FIN  reduce using rule 11 (optional_statements)

    compound_statement  go to state 26
    statement           go to state 52


State 29

   13 statement_list: statement .

    $default  reduce using rule 13 (statement_list)


State 30

    1 program: PROGRAMA ID PARI PARD PYC declarations compound_statement PUNTO .

    $default  reduce using rule 1 (program)


State 31

    3 declarations: declarations VAR identifier_list DOSP . type PYC

    ENTERO  shift, and go to state 53

    type  go to state 54


State 32

    7 identifier_list: identifier_list COMA . ID

    ID  shift, and go to state 55


State 33

   24 statement: error PYC .

    $default  reduce using rule 24 (statement)


State 34

   35 expression: MENOS . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 56


State 35

   36 expression: PARI . expression PARD

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 57


State 36

   43 expression: NOT . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 58


State 37

   45 expression: NUM .

    $default  reduce using rule 45 (expression)


State 38

   44 expression: ID .

    $default  reduce using rule 44 (expression)


State 39

   17 statement: SI expression . ENTONCES statement SINO statement
   18          | SI expression . ENTONCES statement
   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    ENTONCES  shift, and go to state 59
    MAS       shift, and go to state 60
    MENOS     shift, and go to state 61
    MULT      shift, and go to state 62
    DIV       shift, and go to state 63
    MENOR     shift, and go to state 64
    MAYOR     shift, and go to state 65
    IGUAL     shift, and go to state 66


State 40

   19 statement: MIENTRAS expression . HACER statement
   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    HACER  shift, and go to state 67
    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63
    MENOR  shift, and go to state 64
    MAYOR  shift, and go to state 65
    IGUAL  shift, and go to state 66


State 41

   20 statement: HACER statement . MIENTRAS expression PYC

    MIENTRAS  shift, and go to state 68


State 42

   28 print_item: CADENA .

    $default  reduce using rule 28 (print_item)


State 43

   22 statement: IMPRIMIR print_list . PYC
   26 print_list: print_list . COMA print_item

    PYC   shift, and go to state 69
    COMA  shift, and go to state 70


State 44

   25 print_list: print_item .

    $default  reduce using rule 25 (print_list)


State 45

   27 print_item: expression .
   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63
    MENOR  shift, and go to state 64
    MAYOR  shift, and go to state 65
    IGUAL  shift, and go to state 66

    $default  reduce using rule 27 (print_item)


State 46

   29 read_list: ID .

    $default  reduce using rule 29 (read_list)


State 47

   23 statement: LEER read_list . PYC
   30 read_list: read_list . COMA ID

    PYC   shift, and go to state 71
    COMA  shift, and go to state 72


State 48

   21 statement: PARA PARI . ID ASSIGN expression PYC expression PYC expression PARD HACER statement

    ID  shift, and go to state 73


State 49

   15 statement: ID ASSIGN . expression PYC

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 74


State 50

   16 statement: compound_statement PYC .

    $default  reduce using rule 16 (statement)


State 51

    9 compound_statement: COMIENZO optional_statements FIN .

    $default  reduce using rule 9 (compound_statement)


State 52

   14 statement_list: statement_list statement .

    $default  reduce using rule 14 (statement_list)


State 53

    8 type: ENTERO .

    $default  reduce using rule 8 (type)


State 54

    3 declarations: declarations VAR identifier_list DOSP type . PYC

    PYC  shift, and go to state 75


State 55

    7 identifier_list: identifier_list COMA ID .

    $default  reduce using rule 7 (identifier_list)


State 56

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   35           | MENOS expression .
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    $default  reduce using rule 35 (expression)


State 57

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   36           | PARI expression . PARD
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    PARD   shift, and go to state 76
    DIV    shift, and go to state 63
    MENOR  shift, and go to state 64
    MAYOR  shift, and go to state 65
    IGUAL  shift, and go to state 66


State 58

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression
   43           | NOT expression .

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63
    MENOR  shift, and go to state 64
    MAYOR  shift, and go to state 65
    IGUAL  shift, and go to state 66

    MAS       [reduce using rule 43 (expression)]
    MENOS     [reduce using rule 43 (expression)]
    MULT      [reduce using rule 43 (expression)]
    DIV       [reduce using rule 43 (expression)]
    MENOR     [reduce using rule 43 (expression)]
    MAYOR     [reduce using rule 43 (expression)]
    IGUAL     [reduce using rule 43 (expression)]
    $default  reduce using rule 43 (expression)


State 59

   17 statement: SI expression ENTONCES . statement SINO statement
   18          | SI expression ENTONCES . statement

    error     shift, and go to state 18
    COMIENZO  shift, and go to state 13
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    IMPRIMIR  shift, and go to state 22
    LEER      shift, and go to state 23
    PARA      shift, and go to state 24
    ID        shift, and go to state 25

    compound_statement  go to state 26
    statement           go to state 77


State 60

   31 expression: expression MAS . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 78


State 61

   32 expression: expression MENOS . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 79


State 62

   33 expression: expression MULT . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 80


State 63

   34 expression: expression DIV . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 81


State 64

   38 expression: expression MENOR . MAYOR expression
   40           | expression MENOR . expression
   42           | expression MENOR . IGUAL expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    MAYOR  shift, and go to state 82
    IGUAL  shift, and go to state 83
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 84


State 65

   39 expression: expression MAYOR . expression
   41           | expression MAYOR . IGUAL expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    IGUAL  shift, and go to state 85
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 86


State 66

   37 expression: expression IGUAL . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 87


State 67

   19 statement: MIENTRAS expression HACER . statement

    error     shift, and go to state 18
    COMIENZO  shift, and go to state 13
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    IMPRIMIR  shift, and go to state 22
    LEER      shift, and go to state 23
    PARA      shift, and go to state 24
    ID        shift, and go to state 25

    compound_statement  go to state 26
    statement           go to state 88


State 68

   20 statement: HACER statement MIENTRAS . expression PYC

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 89


State 69

   22 statement: IMPRIMIR print_list PYC .

    $default  reduce using rule 22 (statement)


State 70

   26 print_list: print_list COMA . print_item

    MENOS   shift, and go to state 34
    PARI    shift, and go to state 35
    NOT     shift, and go to state 36
    NUM     shift, and go to state 37
    ID      shift, and go to state 38
    CADENA  shift, and go to state 42

    print_item  go to state 90
    expression  go to state 45


State 71

   23 statement: LEER read_list PYC .

    $default  reduce using rule 23 (statement)


State 72

   30 read_list: read_list COMA . ID

    ID  shift, and go to state 91


State 73

   21 statement: PARA PARI ID . ASSIGN expression PYC expression PYC expression PARD HACER statement

    ASSIGN  shift, and go to state 92


State 74

   15 statement: ID ASSIGN expression . PYC
   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    PYC    shift, and go to state 93
    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63
    MENOR  shift, and go to state 64
    MAYOR  shift, and go to state 65
    IGUAL  shift, and go to state 66


State 75

    3 declarations: declarations VAR identifier_list DOSP type PYC .

    $default  reduce using rule 3 (declarations)


State 76

   36 expression: PARI expression PARD .

    $default  reduce using rule 36 (expression)


State 77

   17 statement: SI expression ENTONCES statement . SINO statement
   18          | SI expression ENTONCES statement .

    SINO  shift, and go to state 94

    SINO      [reduce using rule 18 (statement)]
    $default  reduce using rule 18 (statement)


State 78

   31 expression: expression . MAS expression
   31           | expression MAS expression .
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MULT  shift, and go to state 62
    DIV   shift, and go to state 63

    $default  reduce using rule 31 (expression)


State 79

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   32           | expression MENOS expression .
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MULT  shift, and go to state 62
    DIV   shift, and go to state 63

    $default  reduce using rule 32 (expression)


State 80

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   33           | expression MULT expression .
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    $default  reduce using rule 33 (expression)


State 81

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   34           | expression DIV expression .
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    $default  reduce using rule 34 (expression)


State 82

   38 expression: expression MENOR MAYOR . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 95


State 83

   42 expression: expression MENOR IGUAL . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 96


State 84

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   40           | expression MENOR expression .
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63

    $default  reduce using rule 40 (expression)


State 85

   41 expression: expression MAYOR IGUAL . expression

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 97


State 86

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   39           | expression MAYOR expression .
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63

    $default  reduce using rule 39 (expression)


State 87

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   37           | expression IGUAL expression .
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63

    $default  reduce using rule 37 (expression)


State 88

   19 statement: MIENTRAS expression HACER statement .

    $default  reduce using rule 19 (statement)


State 89

   20 statement: HACER statement MIENTRAS expression . PYC
   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    PYC    shift, and go to state 98
    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63
    MENOR  shift, and go to state 64
    MAYOR  shift, and go to state 65
    IGUAL  shift, and go to state 66


State 90

   26 print_list: print_list COMA print_item .

    $default  reduce using rule 26 (print_list)


State 91

   30 read_list: read_list COMA ID .

    $default  reduce using rule 30 (read_list)


State 92

   21 statement: PARA PARI ID ASSIGN . expression PYC expression PYC expression PARD HACER statement

    MENOS  shift, and go to state 34
    PARI   shift, and go to state 35
    NOT    shift, and go to state 36
    NUM    shift, and go to state 37
    ID     shift, and go to state 38

    expression  go to state 99


State 93

   15 statement: ID ASSIGN expression PYC .

    $default  reduce using rule 15 (statement)


State 94

   17 statement: SI expression ENTONCES statement SINO . statement

    error     shift, and go to state 18
    COMIENZO  shift, and go to state 13
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    IMPRIMIR  shift, and go to state 22
    LEER      shift, and go to state 23
    PARA      shift, and go to state 24
    ID        shift, and go to state 25

    compound_statement  go to state 26
    statement           go to state 100


State 95

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   38           | expression MENOR MAYOR expression .
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression

    MAS    shift, and go to state 60
    MENOS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63

    $default  reduce using rule 38 (expression)


State 96

   31 expression: expression . MAS expression
   32           | expression . MENOS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | expression . IGUAL expression
   38           | expression . MENOR MAYOR expression
   39           | expression . MAYOR expression
   40           | expression . MENOR expression
   41           | expression . MAYOR IGUAL expression
   42           | expression . MENOR IGUAL expression
   42           | expression MENOR IGUAL expression .
